--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ plugins {
 }
 
 group = "org.jhipster.health"
-version = "0.0.1-SNAPSHOT"
+version = "0.0.2"
 
 description = ""
 
@@ -97,7 +97,7 @@ test {
     // uncomment if the tests reports are not generated
     // see https://github.com/jhipster/generator-jhipster/pull/2771 and https://github.com/jhipster/generator-jhipster/pull/4484
     // ignoreFailures true
-    reports.html.enabled = false
+    reports.html.enabled = true
 }
 
 task integrationTest(type: Test) {
